# Skyhook

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  README.zh-CN.md  skyhook.example.yaml
.github/workflows/: ci.yml  docs-check.yml  release.yml
benches/: dns.rs  probe_outbounds.rs  routing_decision.rs  subscription_parse.rs  tcp_forwarder.rs  udp_relay.rs
docs/: API.md  FINAL_ACCEPTANCE_CHECKLIST.md  FINAL_VERIFICATION_OUTPUT.md  MIMOCODE_CONTINUATION_PLAN.md  MIMO_EXECUTABLE_FINAL_ACCEPTANCE_PLAN.md  MIMO_FINAL_COMPLETION_AND_OPTIMIZATION_PLAN.md  MIMO_FINAL_COMPLETION_REPORT.md  MIMO_NEXT_DEVELOPMENT_PLAN_AFTER_CODEX_NATIVE_L3_FIX.md  MIMO_POST_REVIEW_NEXT_DEVELOPMENT_PLAN.md  MIMO_REMAINING_FIX_RESULT.md  MIMO_REMAINING_WORK_PLAN_AFTER_REVIEW.md  MIMO_SKYHOOK_DEVELOPMENT_GUIDE.md  MIMO_SKYHOOK_FINAL_SHOWOFF_PLAN.md  NATIVE_TUN_REAL_TEST_REPORT.md  OPENVPN_NOT_INCLUDED_IN_FINAL.md  PERFORMANCE_BENCHMARKS.md  PROTOCOL_SUPPORT_MATRIX.md  REAL_WORLD_TEST_ENV.md  SECURITY.md  SKYHOOK_FOLLOWUP_IMPLEMENTATION_PLAN.md  macos-system-integration.md  检查结果.md
examples/: minimal-direct.yaml  native-tun.yaml  proxy-groups.yaml  smart-rules.yaml
scripts/: bench_final.sh  check_real_subscriptions.sh  install_macos_launch_agent.sh  install_macos_launch_daemon.sh  run_macos_tun.sh  uninstall_macos_launch_agent.sh  uninstall_macos_launch_daemon.sh  verify_all_required.sh  verify_final.sh  verify_native_tun_real.sh  verify_real_protocols.sh
src/: background_tasks.rs  fake_ip.rs  geo.rs  lib.rs  main.rs  runtime_state.rs  subscription_store.rs  traffic_store.rs
src/api/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/l3/: mod.rs
tests/: anytls_wire_tests.rs  api_endpoint_tests.rs  api_tests.rs  background_tasks_tests.rs  config_and_runtime.rs  geo_assets.rs  hysteria_v1_real.rs  hysteria_v1_wire_tests.rs  naive_integration.rs  native_l3_e2e.rs  native_l3_real_e2e.rs  native_l3_tcp_tests.rs  native_l3_udp_tests.rs  native_l4_dispatcher_tests.rs  native_tun_privileged.rs  native_tun_soak.rs  protocol_echo_tests.rs  protocol_integration.rs  protocol_mock_tests.rs  protocol_wire_tests.rs  real_subscription_compat.rs  shadowtls_wire_tests.rs  smart_rules_tests.rs  snell_real_integration.rs  snell_wire_tests.rs  ssh_integration.rs  ssr_real_integration.rs  ssr_wire_tests.rs  subscription_store.rs  subscription_tests.rs  tcp_forwarder_e2e.rs  traffic_store_tests.rs  tuic_wire_tests.rs
(+28 files in other folders)
