[package]
name = "skyhook"
version = "0.1.0"
edition = "2021"
description = "Skyhook, a Rust-native intelligent proxy core"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["proxy", "tun", "routing", "rust", "networking"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
aes = "0.8"
aes-gcm = "0.10"
axum = "0.7"
base64 = "0.22"
blake2 = "0.10"
boringtun = "0.7.1"
bytes = "1"
chacha20 = "0.9"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
crc32c = "0.6"
digest = "0.10"
dirs = "5"
getrandom = "0.3"
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
hkdf = "0.12"
http = "1"
ipnet = { version = "2", features = ["serde"] }
libc = "0.2"
maxminddb = "0.28.1"
md-5 = "0.10"
quinn = "0.11.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "charset", "blocking"] }
rustls = "0.23"
rustls-pki-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tproxy-config = "7.0.7"
tun2proxy = "0.8.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
webpki-roots = "1"
x25519-dalek = { version = "3.0.0-rc.0", features = ["getrandom", "static_secrets"] }
russh = "0.61.2"
cfb-mode = "0.8.2"
argon2 = "0.5.3"
smoltcp = { version = "0.12", default-features = false, features = [
    "std",
    "medium-ip",
    "socket-tcp",
    "socket-udp",
    "proto-ipv4",
    "proto-ipv6",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.13"
tempfile = "3"

[[bench]]
name = "routing_decision"
harness = false

[[bench]]
name = "tcp_forwarder"
harness = false

[[bench]]
name = "udp_relay"
harness = false

[[bench]]
name = "dns"
harness = false

[[bench]]
name = "subscription_parse"
harness = false

[[bench]]
name = "probe_outbounds"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[patch.crates-io]
rustls = { path = "vendor/rustls-0.23.40" }
